--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
       <!-- Картки зображень -->
     </div>
     <div class="js-guard"></div>
+    <a href="#" class="button-up" disablet>Вверх^</a>
   </body>
 </html>
